View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029633 | Open CASCADE | OCCT:Data Exchange | public | 2018-03-23 12:30 | 2018-10-08 09:15 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.0.0 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0029633: Data Exchange - access violation in StepVisual_PresentationStyleAssignment while translating STEP file | ||||
Description | The following issue occurs while translating STEP file nist_ctc_05_asme1_ap242-1.stp (attached to #0027644):0xC0000005: Access violation reading location 0x0000000000000014. > TKSTEPAttr.dll!StepVisual_PresentationStyleAssignment::NbStyles() Line 48 + 0x4 bytes C++ TKSTEP.dll!STEPConstruct_Styles::GetColors(const opencascade::handle<StepVisual_StyledItem> & style, opencascade::handle<StepVisual_Colour> & SurfCol, opencascade::handle<StepVisual_Colour> & BoundCol, opencascade::handle<StepVisual_Colour> & CurveCol, bool & IsComponent) Line 565 + 0xb bytes C++ TKXDESTEP.dll!STEPCAFControl_Reader::ReadColors(const opencascade::handle<XSControl_WorkSession> & WS, opencascade::handle<TDocStd_Document> & Doc, const NCollection_DataMap<opencascade::handle<StepBasic_ProductDefinition>, opencascade::handle<STEPCAFControl_ExternFile>, NCollection_DefaultHasher<opencascade::handle<Standard_Transient> > > & PDFileMap, const NCollection_DataMap<TopoDS_Shape,TDF_Label,TopTools_ShapeMapHasher> & ShapeLabelMap) Line 926 + 0x2c bytes C++ TKXDESTEP.dll!STEPCAFControl_Reader::Transfer(STEPControl_Reader & reader, const int nroot, opencascade::handle<TDocStd_Document> & doc, NCollection_Sequence<TDF_Label> & Lseq, const bool asOne) Line 661 + 0x2e bytes C++ TKXDESTEP.dll!STEPCAFControl_Reader::Transfer(opencascade::handle<TDocStd_Document> & doc) Line 406 + 0x1f bytes C++ | ||||
Steps To Reproduce | pload XDE ReadStep D [locate_data_file nist_ctc_05_asme1_ap242-1.stp] test case: gdt export C3 | ||||
Tags | No tags attached. | ||||
Test case number | gdt export C3 | ||||
|
Branch CR29633 has been created by ika. SHA-1: d41c2c27937d56042fc06b6632f7f255f22fa06b Detailed log of new commits: Author: ika Date: Fri Mar 23 18:12:00 2018 +0300 0029633: Data Exchange - access violation in StepVisual_PresentationStyleAssignment while translating STEP file Add several checks for null. |
2018-03-26 13:00 developer |
bug29633_nist_ctc_05_asme1_ap242-1.stp (878,598 bytes) |
|
Several checks for null was added. Dear GKA, could you please review branch CR29633? test results: http://occt-tests/CR29633-master-ika-OCCT/Debian70-64/diff_summary.html http://occt-tests/CR29633-master-ika-OCCT/Windows-64-VC10/diff_summary.html http://occt-tests/CR29633-master-ika-Products/Debian70-64/diff_summary.html http://occt-tests/CR29633-master-ika-Products/Windows-64-VC10/diff_summary.html Note: Now STEP reader throws error: *** ERR StepReaderData *** Pour Entite #-4 Type:/* (SUB) */ Param.n0 1: #14001 Non trouve the problem is in invalid entity #14000=COMPOUND_REPRESENTATION_ITEM('',SET_REPRESENTATION_ITEM((#14001)); (wrong number of braces) this error do not affect file import. |
|
Branch CR29633 was reviewed |
|
Combination - OCCT branch : CR29633 SHA - d41c2c27937d56042fc06b6632f7f255f22fa06b Products branch : master SHA - d1433da51be7aa6ea5f04a20d332d5b18f879d1f was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian70-64: OCCT Total CPU difference: 18348.599999999864 / 18135.489999999976 [+1.18%] Products Total CPU difference: 7440.99 / 7435.139999999992 [+0.08%] Windows-64-VC10: OCCT Total CPU difference: 17906.995987698487 / 17864.39211459853 [+0.24%] Products Total CPU difference: 8112.941205700006 / 8129.77371359997 [-0.21%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR29633 has been deleted by kgv. SHA-1: d41c2c27937d56042fc06b6632f7f255f22fa06b |
occt: master f0bef121 2018-03-23 15:12:00
Committer: bugmaster Details Diff |
0029633: Data Exchange - access violation in StepVisual_PresentationStyleAssignment while translating STEP file Add several checks for null. |
Affected Issues 0029633 |
|
mod - src/STEPCAFControl/STEPCAFControl_Reader.cxx | Diff File | ||
mod - src/StepVisual/StepVisual_PresentationStyleAssignment.cxx | Diff File | ||
mod - src/StepVisual/StepVisual_SurfaceSideStyle.cxx | Diff File | ||
add - tests/gdt/export/C3 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-03-23 12:30 | kgv | New Issue | |
2018-03-23 12:30 | kgv | Assigned To | => gka |
2018-03-23 12:31 | kgv | Description Updated | |
2018-03-23 12:33 | kgv | Steps to Reproduce Updated | |
2018-03-23 14:03 | gka | Assigned To | gka => ika |
2018-03-23 14:07 | kgv | Description Updated | |
2018-03-23 14:07 | kgv | Status | new => assigned |
2018-03-26 13:00 | git | Note Added: 0074913 | |
2018-03-26 13:00 |
|
File Added: bug29633_nist_ctc_05_asme1_ap242-1.stp | |
2018-03-26 16:52 |
|
Note Added: 0074934 | |
2018-03-26 16:52 |
|
Assigned To | ika => gka |
2018-03-26 16:52 |
|
Status | assigned => resolved |
2018-03-26 16:52 |
|
Steps to Reproduce Updated | |
2018-03-27 11:04 | gka | Note Added: 0074947 | |
2018-03-27 11:04 | gka | Assigned To | gka => bugmaster |
2018-03-27 11:04 | gka | Status | resolved => reviewed |
2018-03-27 17:08 | bugmaster | Test case number | => gdt export C3 |
2018-03-27 17:25 | bugmaster | Note Added: 0074973 | |
2018-03-27 17:25 | bugmaster | Status | reviewed => tested |
2018-04-11 07:49 | bugmaster | Changeset attached | => occt master f0bef121 |
2018-04-11 07:49 | bugmaster | Status | tested => verified |
2018-04-11 07:49 | bugmaster | Resolution | open => fixed |
2018-04-11 11:00 | git | Note Added: 0075336 | |
2018-06-29 21:14 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |
The file specified in $g_log_destination "/var/log/mantis/bugs/LDAP.log" is not writable.