0029633: Data Exchange - access violation in StepVisual_PresentationStyleAssignment while translating STEP file

Add several checks for null.